# kaa

./: .gitignore  CMakeLists.txt  build.sh
kaacore/inc/: types.h
kaasvc/: CMakeLists.txt
kaasvc/protos/: kaa.proto
kaasvc/src/: kaa_dataaccess_svc.cpp  kaa_dataaccess_svc.h  main.cpp
